--- a/src/views/UserPage.css
+++ b/src/views/UserPage.css
@@ -7,7 +7,7 @@
     text-shadow: 0 -1px 0 #111;
     color: #BDBDBD;
     margin-bottom: 35px;
-    height: 45%;
+    flex: 1;
     font-size: 1rem;
 }
 .profilepic {
@@ -42,4 +42,12 @@
 }
 .modalinput {
     width: 100%;
+}
+.usercardcol {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+}
+.usercard .card-body {
+    overflow: hidden;
 }
