Added User List
#MUS-88

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,4 +1,4 @@
-.playlist .header {
+.mb-table .header {
     background-color: #121212;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
