--- a/src/views/UserPage.css
+++ b/src/views/UserPage.css
@@ -50,7 +50,19 @@
 }
 .usercard .card-body {
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
 }
 .profilepic .card-body {
     height: 290px;
+}
+.buttonrow {
+    bottom: 0;
+    justify-content: space-between;
+    flex-direction: row-reverse;
+    flex-grow: 1;
+    align-items: flex-end;
+}
+.buttonrow button {
+    height: 40px;
 }
