--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,51 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    margin: 0;
+    padding: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: #333;
-  background-image: url(./res/bgtexture.png);
-  cursor: default;
-  padding-bottom: 50px;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background-color: #333;
+    background-image: url(./res/bgtexture.png);
+    cursor: default;
+    overflow: hidden;
 }
 
-html, body, #root, #root > div {
+html, body, #root {
     height: 100%;
+}
+
+#root {
+    display: flex;
+    flex-direction: column;
+}
+
+.page-body {
+    overflow-y: auto;
+    overflow-y: overlay;
+    height: 100%;
+    padding-bottom: 30px;
+}
+
+/* width */
+.page-body::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+.page-body::-webkit-scrollbar-track {
+    background: rgba(0,0,0,0);
+}
+
+/* Handle */
+.page-body::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+/* Handle on hover */
+.page-body::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
 
 code {
@@ -26,8 +58,6 @@ code {
 }
 
 footer {
-    position: fixed;
-    bottom: 0px;
     width: 100%;
     height: 30px;
     line-height: 30px;
@@ -52,6 +82,11 @@ footer a, footer a:hover {
 
 .react-logo {
     right: 0px;
+    margin-right: 15px;
+}
+
+.spotify-logo {
+    margin-left: 15px;
 }
 
 .clock {
@@ -224,9 +259,6 @@ button.close {
     background-color: inherit!important;
     background-image: none!important;
     box-shadow: none!important;
-}
-.space-bottom {
-    margin-bottom: 4em;
 }
 .cross-fade-leave {
     opacity: 1;
