Some design improvements

--- a/src/views/Log.css
+++ b/src/views/Log.css
@@ -1,6 +1,6 @@
 .log {
     padding: 1em;
-    margin: 0 1em 1em 1em;
+    margin: 0 1em 0 1em;
     height: 80vh;
     vertical-align: middle;
     border-radius: 4px;
