--- a/src/views/Stats.css
+++ b/src/views/Stats.css
@@ -1,6 +1,3 @@
-.statscard {
-    margin-bottom: 30px;
-}
 .statscard table {
     width: 100%;
 }
@@ -25,9 +22,24 @@
 .statscard .card a {
     color: #BDBDBD;
 }
+.statscontainer {
+    height: 100%;
+}
 .statsrow {
-    flex-grow: 1;
-    padding-bottom: 1em;
+    flex: 1;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 30px 30px;
+    margin: 0;
+    align-content: stretch;
+}
+@media (max-width: 992px) {
+    .statsrow {
+        grid-template-rows: repeat(4,1fr);
+        grid-template-columns: 1fr;
+        margin-bottom: 30px;
+    }
 }
 .statsrow td {
     text-overflow: ellipsis;
