--- a/src/components/Alerts.css
+++ b/src/components/Alerts.css
@@ -6,7 +6,7 @@
     overflow: auto;
 }
 .alerts .alert {
-    box-shadow: 0px 0px 1rem 8px rgba(0,0,0,0.5);
+    box-shadow: 0 0 1rem 8px rgba(0,0,0,0.5);
     white-space: pre-line;
 }
 .slidedown-enter {
