--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ html, body, #root {
     flex-direction: column;
 }
 
+/*noinspection CssOverwrittenProperties,CssInvalidPropertyValue*/
 .page-body {
     overflow-y: auto;
     overflow-y: overlay;
@@ -65,7 +66,7 @@ footer {
     background-image: url(./res/bgtexture.png);
     background-color: #121212;
     color: #E0E0E0;
-    padding: 0px 5px 0px 5px;
+    padding: 0 5px 0 5px;
 }
 
 footer a, footer a:hover {
@@ -76,12 +77,12 @@ footer a, footer a:hover {
     position: fixed;
     z-index: -10;
     height: 50px;
-    margin: 0px 5px 5px 5px;
+    margin: 0 5px 5px 5px;
     bottom: 30px;
 }
 
 .react-logo {
-    right: 0px;
+    right: 0;
     margin-right: 15px;
 }
 
@@ -105,12 +106,12 @@ footer a, footer a:hover {
 .LoginBox {
     position: fixed;
     bottom: 30px;
-    left: 0px;
+    left: 0;
     z-index: 40;
     padding: 9px 12px 6px 12px;
     border: 1px solid #181818;
     border-bottom: 0;
-    border-radius: 0px 8px 0 0;
+    border-radius: 0 8px 0 0;
     color: #E0E0E0;
     background-color: #222;
 }
@@ -138,6 +139,7 @@ footer a, footer a:hover {
     text-decoration: none;
 }
 
+/*noinspection CssOverwrittenProperties*/
 .vertical-center {
     min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
     min-height: 90vh; /* These two lines are counted as one :-)       */
@@ -182,12 +184,12 @@ footer a, footer a:hover {
     list-style: none;
     position: fixed;
     bottom: 30px;
-    margin-bottom: 0px;
+    margin-bottom: 0;
     z-index: 40;
     padding: 9px 12px 6px 12px;
     border: 1px solid #181818;
     border-bottom: 0;
-    border-radius: 0px 8px 0 0;
+    border-radius: 0 8px 0 0;
     color: #E0E0E0;
     background-color: #222;
     min-width: 11em;
@@ -218,10 +220,9 @@ button {
     text-shadow: 0 1px 0 #eee;
     display: inline-block;
     margin: 0;
-    padding: 6px 0;
     border-radius: 4px;
     border: none;
-    border-right: 1px solid #666;
+    border-right: 1px solid;
     background-color: #eee!important;
     background-image: linear-gradient(#eee, #bbb 70%, #9f9f9f 100% );
     background-position: 0 6px;
@@ -231,8 +232,7 @@ button {
     font-size: 1em;
     font-weight: bold;
     cursor: pointer;
-    padding-left: 5px;
-    padding-right: 5px;
+    padding: 6px 5px;
 }
 button:hover {
     background-position: 0;
@@ -249,7 +249,7 @@ button:focus {
     color: #333!important;
 }
 button:active {
-    box-shadow: inset rgba(0,0,0,.5) 0px 5px 10px!important;
+    box-shadow: inset rgba(0,0,0,.5) 0 5px 10px!important;
     border-color: initial!important;
     background-color: #eee!important;
     color: #333!important;
