--- a/src/views/Archiv.css
+++ b/src/views/Archiv.css
@@ -1,5 +1,5 @@
 .archiv td {
-    padding: 0px;
+    padding: 0;
 }
 /* Song Animation */
 .song-anim-enter {
@@ -34,7 +34,7 @@
 .page-item.active .page-link {
     color: inherit;
     border-color: #9f9f9f;
-    box-shadow: inset rgba(0,0,0,.5) 0px 1px 4px!important;
+    box-shadow: inset rgba(0,0,0,.5) 0 1px 4px!important;
 }
 .page-link:hover {
     color: inherit;
