--- a/src/views/Home.css
+++ b/src/views/Home.css
@@ -6,7 +6,7 @@
     font-weight: bold;
     border: 1px solid #2a2a2a;
     border-radius: 6px;
-    box-shadow: inset 0px 2px 2px rgba(0, 0, 0, .5), 0px 1px 0px rgba(250, 250, 250, .2);
+    box-shadow: inset 0 2px 2px rgba(0, 0, 0, .5), 0 1px 0 rgba(250, 250, 250, .2);
     text-shadow: none;
     font-size: 14px;
 }
@@ -21,7 +21,7 @@
     line-height: 1.5em;
 }
 .Control .col {
-    padding:0px;
+    padding:0;
 }
 .Control .col:first-child button {
     border-radius: 4px 0 0 4px;
@@ -39,9 +39,7 @@
     padding: 6px 0;
     border-radius: 0;
     border: none;
-    border-right: 1px solid #666;
-    box-shadow: none!important;
-    font-size: 1em!important;
+    border-right: 1px solid;
     background-color: #eee!important;
     background-image: linear-gradient(#eee, #bbb 70%, #9f9f9f 100% );
     background-position: 0 6px;
@@ -67,7 +65,7 @@
     color: #333!important;
 }
 .Control button:active {
-    box-shadow: inset rgba(0,0,0,.5) 0px 5px 10px!important;
+    box-shadow: inset rgba(0,0,0,.5) 0 5px 10px!important;
     border-color: initial!important;
     background-color: #eee!important;
     color: #333!important;
@@ -141,7 +139,7 @@
     color: #9E9E9E;
 }
 .BottomControl .col-6 {
-    padding: 0px;
+    padding: 0;
 }
 .BottomControl .col-6:last-child * {
     float: right;
@@ -160,7 +158,7 @@
     line-height: 1.7em;
     text-shadow: none;
     background-image: url(../res/bgtexture.png);
-    box-shadow: 0px 0px 60px 5px rgba(0,0,0,0.5);
+    box-shadow: 0 0 60px 5px rgba(0,0,0,0.5);
     padding: 0;
     text-align: center;
     user-select: none;
