--- a/src/views/Log.css
+++ b/src/views/Log.css
@@ -4,7 +4,7 @@
     height: 80vh;
     vertical-align: middle;
     border-radius: 4px;
-    box-shadow: inset 0px 2px 2px rgba(0, 0, 0, .5), 0px 1px 0px rgba(250, 250, 250, .2);
+    box-shadow: inset 0 2px 2px rgba(0, 0, 0, .5), 0 1px 0 rgba(250, 250, 250, .2);
     box-sizing: border-box;
     text-shadow: 0 -1px 0 #111;
     overflow-y: scroll;
