--- a/src/views/Playlist.css
+++ b/src/views/Playlist.css
@@ -4,7 +4,7 @@
     line-height: 1.7em;
     text-shadow: none;
     background-image: url(../res/bgtexture.png);
-    box-shadow: 0px 0px 60px 5px rgba(0,0,0,0.5);
+    box-shadow: 0 0 60px 5px rgba(0,0,0,0.5);
     padding: 0;
     text-align: center;
     background-color: #121212;
