--- a/src/views/Stats.css
+++ b/src/views/Stats.css
@@ -12,7 +12,7 @@
 
 .statscard .card {
     border-radius: 4px;
-    box-shadow: inset 0px 2px 2px rgba(0, 0, 0, .5), 0px 1px 0px rgba(250, 250, 250, .2);
+    box-shadow: inset 0 2px 2px rgba(0, 0, 0, .5), 0 1px 0 rgba(250, 250, 250, .2);
     background-color: #252525;
     background-image: url(../res/bgtexture.png);
     box-sizing: border-box;
