QuickAdd Component ist visible permanently
#MUS-168 Resolved

--- a/src/components/QuickAdd.css
+++ b/src/components/QuickAdd.css
@@ -3,8 +3,8 @@
     text-align: center;
 }
 .quickadd > * {
-    visibility: hidden;
+    opacity: 0.3;
 }
 .quickadd:hover > * {
-    visibility: visible;
+    opacity: 1;
 }
