Icons for AMenu Entries (#112)
* Icons for AMenu Entries

* :recycle: Rename AMenu to Menu

* :lipstick: Center menu icons

* :bug: Fix all menu items linking to import

---------

Co-authored-by: Sven Kirschbaum <sven@kirschbaum.me>

--- a/src/index.css
+++ b/src/index.css
@@ -224,7 +224,7 @@ footer a, footer a:hover {
     transition: all 300ms;
 }
 
-.AMenu {
+.menu {
     list-style: none;
     position: fixed;
     bottom: 30px;
@@ -238,9 +238,13 @@ footer a, footer a:hover {
     background-color: #222;
     min-width: 11em;
 }
-.AMenu a {
+
+.menu a {
     color: inherit;
+    display: flex;
+    align-items: center;
 }
+
 .space-top {
     margin-top: 1.5em;
 }
