:sparkles: Show estimated played at time
#MUS-208 Resolved

--- a/src/views/Home.css
+++ b/src/views/Home.css
@@ -195,7 +195,8 @@
 .mb-table .songid {
     width: 5em;
 }
-.mb-table .insertat {
+
+.mb-table .datetime {
     width: 10em;
 }
 .mb-table .author {
