--- a/src/components/AddSong.css
+++ b/src/components/AddSong.css
@@ -22,3 +22,27 @@
         padding-bottom: 1em;
     }
 }
+
+.hidden {
+    display: none;
+}
+
+.addSongInput {
+    color: white;
+    width: 100%;
+}
+
+.suggestion-label {
+    font-weight: bold;
+}
+
+.suggestion-link {
+    /* Shorten text with dots if to long */
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.suggestion.highlighted {
+    background-color: #ddd;
+}
